--- a/E-Library-System/src/main/resources/templates/bookList.html
+++ b/E-Library-System/src/main/resources/templates/bookList.html
@@ -49,14 +49,15 @@
         </thead>
         <tbody>
         <tr th:each="b :${book}">
-            <td th:text="${b.id}"></td>
-            <td th:text="${b.name}"></td>
+            <td th:text="${b.bookId}"></td>
+            <td th:text="${b.bookTitle}"></td>
             <td th:text="${b.author}"></td>
-            <td th:text="${b.price}"></td>
-            <td><a class="btn btn-secondary btn-sm" th:href="@{/mylist/{id}(id=${b.id})}">Add To Mybook</a>
-                <a style="color:blue" th:href="@{/editBook/{id}(id=${b.id})}"><i class="fa-solid fa-pen-to-square ms-4"></i></a>
-                <a style="color:red" th:href="@{/deleteBook/{id}(id=${b.id})}"><i class="fa-solid fa-trash ms-4"></i></a>
+            <td>100$</td>
+            <td><a class="btn btn-secondary btn-sm" th:href="@{/mylist/{id}(id=${b.bookId})}">Add To Mybook</a>
+                <a style="color:blue" th:href="@{/editBook/{id}(id=${b.bookId})}"><i class="fa-solid fa-pen-to-square ms-4"></i></a>
+                <a style="color:red" th:href="@{/deleteBook/{id}(id=${b.bookId})}"><i class="fa-solid fa-trash ms-4"></i></a>
             </td>
+            `
 
         </tr>
 
