--- a/E-Library-System/src/main/resources/templates/myBooks.html
+++ b/E-Library-System/src/main/resources/templates/myBooks.html
@@ -114,7 +114,7 @@
             <td th:text="${b.name}"></td>
             <td th:text="${b.author}"></td>
             <td th:text="${b.price}"></td>
-            <td><a style="color:red" th:href="@{/deleteMyList/{id}(id=${b.id})}"><i class="fa-solid fa-trash"></i></a></td>
+            <td><a style="color:red" th:href="@{/returnmybook/{id}(id=${b.id})}"><i class="fa-solid fa-trash"></i></a></td>
         </tr>
         </tbody>
     </table>
