--- a/E-Library-System/src/main/resources/templates/bookEdit.html
+++ b/E-Library-System/src/main/resources/templates/bookEdit.html
@@ -46,7 +46,7 @@
 
         <input type="hidden" name="id" th:value="${book.id}"/>
         <div class="mb-3">
-            <label for="name" class="form-label">Name
+            <label for="name" class="form-label">Book Name
             </label> <input type="text" class="form-control" name="name" th:value="${book.name}">
         </div>
 
