--- a/E-Library-System/src/main/resources/templates/bookRegister.html
+++ b/E-Library-System/src/main/resources/templates/bookRegister.html
@@ -106,7 +106,7 @@
     <h4 class="text-center">New Book Register</h4>
     <form class="col-md-4 offset-md-4" th:action="@{/save}" method="post">
         <div class="mb-3">
-            <label for="name" class="form-label">Name
+            <label for="name" class="form-label">Book Name
             </label> <input type="text" class="form-control" name="name">
         </div>
 
@@ -114,6 +114,7 @@
             <label for="author" class="form-label">Author
             </label> <input type="text" class="form-control" name="author">
         </div>
+
         <div class="mb-3">
             <label for="price" class="form-label">Price
             </label> <input type="text" class="form-control" name="price">
