--- a/E-Library-System/src/main/resources/templates/myBooks.html
+++ b/E-Library-System/src/main/resources/templates/myBooks.html
@@ -102,10 +102,10 @@
         <thead>
         <tr>
             <th scope="col">Id</th>
-            <th scope="col">Name</th>
+            <th scope="col">Book Name</th>
             <th scope="col">Author</th>
             <th scope="col">Price</th>
-            <th scope="col">Action</th>
+            <th scope="col">Return Book</th>
         </tr>
         </thead>
         <tbody>
@@ -114,7 +114,7 @@
             <td th:text="${b.name}"></td>
             <td th:text="${b.author}"></td>
             <td th:text="${b.price}"></td>
-            <td><a style="color:red" th:href="@{/returnmybook/{id}(id=${b.id})}"><i class="fa-solid fa-trash"></i></a></td>
+            <td><a style="color:red" th:href="@{/returnmybook/{id}(id=${b.id})}"><i class="fa-solid fa-book"></i></a></td>
         </tr>
         </tbody>
     </table>
